--- a/bot_aggregator/bot_aggregator.routing.yml
+++ b/bot_aggregator/bot_aggregator.routing.yml
@@ -1,7 +1,7 @@
 bot_aggregator.form:
-  path: 'admin/config/bot/bot_aggregator'
+  path: 'admin/config/user-interface/bot_aggregator'
   defaults:
     _title: 'Bot Agregator'
-    _form: '\modules\bot\bot_auth\Form\botauthform'
+    _form: '\Drupal\bot_aggregator\Form\BotAggregatorForm'
   requirements:
     _permission: 'access administration pages'
