--- a/bot_agotchi/bot_agotchi.info.yml
+++ b/bot_agotchi/bot_agotchi.info.yml
@@ -1,6 +1,7 @@
-name: 'Botagotchi'
-dependencies: bot
+name: 'Bot Agotchi'
+dependencies[]: bot
 description: 'Proper care and feeding lets your botagotchi grow and be happy!'
+configure: bot_agotchi.form
 core: 8.x
 type: module
-configure: bot_agotchi.form
+
