--- a/bot_auth/bot_auth.routing.yml
+++ b/bot_auth/bot_auth.routing.yml
@@ -1,7 +1,7 @@
 bot_auth.form:
-  path: 'admin/config/botold/bot_auth'
+  path: 'admin/config/user-interface/bot_auth'
   defaults:
     _title: 'Bot Auth'
-    _form: 'bot_auth.form'
+    _form: '\Drupal\bot_auth\Form\BotAuthForm'
   requirements:
     _permission: 'access administration pages'
