--- a/bot_drupal_api/bot_drupal_api.routing.yml
+++ b/bot_drupal_api/bot_drupal_api.routing.yml
@@ -1,7 +1,7 @@
-drupal_api.form:
-  path: 'admin/config/bot/bot_drupal_api'
+bot_drupal_api.form:
+  path: 'admin/config/user-interface/bot_drupal_api'
   defaults:
     _title: 'Bot Drupal API'
-    _form: 'drupal_api.form'
+    _form: '\Drupal\bot_drupal_api\Form\BotDrupalApiForm'
   requirements:
     _permission: 'access administration pages'
