--- a/bot_log/bot_log.routing.yml
+++ b/bot_log/bot_log.routing.yml
@@ -1,7 +1,7 @@
 bot_log.form:
-  path: 'admin/config/bot/log'
+  path: 'admin/config/user-interface/log'
   defaults:
     _title: 'Bot Log'
-    _form: 'Drupal\modules\bot\bot_log\Form\botlogform'
+    _form: '\Drupal\bot_log\Form\BotLogForm'
   requirements:
     _permission: 'access administration pages'
